--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,7 +4,7 @@ updates:
   directory: "/"
   schedule:
     interval: weekly
-    day: sunday
+    day: monday
     time: "10:00"
   open-pull-requests-limit: 10
-  target-branch: master
+  target-branch: development
