--- a/.github/workflows/publish_images.yml
+++ b/.github/workflows/publish_images.yml
@@ -6,6 +6,9 @@ on:
     types: [published]
   pull_request:
 
+env:
+  REGISTRY_IMAGE: ghcr.io/${{ github.repository }}
+
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
@@ -28,7 +31,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: |
-            ghcr.io/${{ github.repository_owner }}/${{ github.repository }}
+            ${{ env.REGISTRY_IMAGE }}
           flavor: latest=${{ startsWith(github.ref, 'refs/tags/') }}
           tags: |
             type=semver,pattern={{version}}
